Implemented JWT Authentication system in Spring Boot 3 and Spring Security 6